--- a/data_analysis/beom_pre.ipynb
+++ b/data_analysis/beom_pre.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import"
+    "# import"
    ]
   },
   {
@@ -199,6 +199,14 @@
    ],
    "source": [
     "train_df.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Entity 분리하기"
    ]
   },
   {
