--- a/data_analysis/heejin_viz.ipynb
+++ b/data_analysis/heejin_viz.ipynb
@@ -11884,11 +11884,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "de918eef",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# 앞으로 시도할 수 있는 전처리 후보들\n",
+    "마스터클래스에서 알려주신 내용들\n",
+    "1.  다양한 한국어/Multilingual)사전학습 모델을 사용\n",
+    "    - klue/bert-base, klue- RoBERTa, KoBERT, KoGPT2, KoBart, KoElectra\n",
+    "2. entity special token 추가하기\n",
+    "    - entity marker: Entity의 종류에 관계 없이 시작과 끝을 표시하기\n",
+    "    - typed entity marker: Entity의 종류에 따라 다른 special token을 사용하기\n",
+    "    - typed entity marker(punct): Special token을 추가하는 대신 문장 부호를 이용하기\n",
+    "3. Additional Embedding Layer: Entity 유무에 따른 임베딩 레이어를 추가\n",
+    "4. Additional Output layer: Language Model을 중심으로 layer를 더 쌓아보기\n",
+    "5. Language Model Domain Adaptation: 사전학습된 언어 모델을 대회 데이터셋 내의 문장들에 한번 더 사전학습한 다음에 평소처럼 Finetuning 해보기\n",
+    "6. Multi-task Learning using Entity Information\n",
+    "7. 데이터 증강\n",
+    "    - EDA(Easy Data Augmentation)\n",
+    "    - Back-translation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d862038",
+   "metadata": {},
    "source": []
   }
  ],
