--- a/data_analysis/heejin_viz.ipynb
+++ b/data_analysis/heejin_viz.ipynb
@@ -1606,7 +1606,7 @@
    "id": "a9dbf0e1",
    "metadata": {},
    "source": [
-    "- DAT ➡️ (18)org:founded, (22)org:dissolved, (24)oerLdate_of_death\n",
+    "- DAT ➡️ (18)org:founded, (22)org:dissolved, (24)per:date_of_death\n",
     "- NOH ➡️ (9)org:number_of_employees/member\n",
     "- POH ➡️ (3)org:product, (4)per:title, (8)per:product\n",
     "- LOC ➡️ (7)org:place_of_headquarters, (11)per:place_of_residence, (15)per:origin\n",
