update remove_duplicated(), add_tokens_base(), add_tokens_detail()

--- a/data_analysis/beom_viz.ipynb
+++ b/data_analysis/beom_viz.ipynb
@@ -687,6 +687,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "231"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tokenizer.encode(train_df['sentence'][13877]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -726,7 +746,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 max_len을 400으로 해도 [PAD]이 없는 13877 번째 데이터 보기 (예외처리)"
+    "## 3.1 max_len을 200으로 해도 [PAD]이 없는 13877 번째 데이터 보기 (예외처리)"
    ]
   },
   {
@@ -1847,6 +1867,37 @@
    ],
    "source": [
     "train_df['sentence'].str.extract('([^A-Za-z0-9가-힣\\sぁ-ゔァ-ヴー々〆〤一-龥]{2,9999})').value_counts().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "~)     1397\n",
+       "),      776\n",
+       ")(      245\n",
+       ")'      124\n",
+       ".\"      105\n",
+       "       ... \n",
+       ".》        1\n",
+       ".〉,       1\n",
+       ".∼        1\n",
+       ".”.       1\n",
+       "-)(       1\n",
+       "Length: 282, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df['sentence'].str.extract('([^A-Za-z0-9가-힣\\sぁ-ゔァ-ヴー々〆〤一-龥]{2,9999})').value_counts()"
    ]
   },
   {
