update resize vocab size of tokenizer

--- a/data_analysis/beom_pre.ipynb
+++ b/data_analysis/beom_pre.ipynb
@@ -2726,6 +2726,85 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. 스폐셜 토큰 추가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['[OTH]',\n",
+       "  '[ENT]',\n",
+       "  '[/ENT]',\n",
+       "  '[S:PER]',\n",
+       "  '[/S:PER]',\n",
+       "  '[S:NOH]',\n",
+       "  '[/S:NOH]',\n",
+       "  '[S:ORG]',\n",
+       "  '[/S:ORG]',\n",
+       "  '[S:LOC]',\n",
+       "  '[/S:LOC]',\n",
+       "  '[S:POH]',\n",
+       "  '[/S:POH]',\n",
+       "  '[S:DUR]',\n",
+       "  '[/S:DUR]',\n",
+       "  '[S:PNT]',\n",
+       "  '[/S:PNT]',\n",
+       "  '[S:TIM]',\n",
+       "  '[/S:TIM]',\n",
+       "  '[S:MNY]',\n",
+       "  '[/S:MNY]',\n",
+       "  '[S:DAT]',\n",
+       "  '[/S:DAT]',\n",
+       "  '[O:PER]',\n",
+       "  '[/O:PER]',\n",
+       "  '[O:NOH]',\n",
+       "  '[/O:NOH]',\n",
+       "  '[O:ORG]',\n",
+       "  '[/O:ORG]',\n",
+       "  '[O:LOC]',\n",
+       "  '[/O:LOC]',\n",
+       "  '[O:POH]',\n",
+       "  '[/O:POH]',\n",
+       "  '[O:DUR]',\n",
+       "  '[/O:DUR]',\n",
+       "  '[O:PNT]',\n",
+       "  '[/O:PNT]',\n",
+       "  '[O:TIM]',\n",
+       "  '[/O:TIM]',\n",
+       "  '[O:MNY]',\n",
+       "  '[/O:MNY]',\n",
+       "  '[O:DAT]',\n",
+       "  '[/O:DAT]'],\n",
+       " 43)"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = ['[OTH]', '[ENT]', '[/ENT]']\n",
+    "\n",
+    "# entity detail\n",
+    "for category in ['S', 'O']:\n",
+    "    for type in ['PER', 'NOH', 'ORG', 'LOC', 'POH', 'DUR', 'PNT', 'TIM', 'MNY', 'DAT']:\n",
+    "        arr.append(f\"[{category}:{type}]\")\n",
+    "        arr.append(f\"[/{category}:{type}]\")\n",
+    "    \n",
+    "arr, len(arr)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
