feat: 띄어쓰기 교정해주는 전처리 기법 구현

--- a/data_analysis/beom_pre.ipynb
+++ b/data_analysis/beom_pre.ipynb
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,14 +2008,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "이 되다 할수있어 비슷하다 근거하여 그치지 않다 시각 아하 저기 가까스로 그런데 "
+      "언제 봐라 아이쿠 혹시 쿵 비슷하다 한켠으로는 아야 있다 하곤하였다 "
      ]
     }
    ],
@@ -2033,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2091,7 +2091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2149,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2211,6 +2211,73 @@
    "metadata": {},
    "source": [
     "# 6. 띄어쓰기 교정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===== 0 =====\n",
+      "original >> 〈Something〉는 조지 해리슨이 쓰고 비틀즈가 1969년 앨범 《Abbey Road》에 담은 노래다.\n",
+      "replace >> 〈Something〉는조지해리슨이쓰고비틀즈가1969년앨범《AbbeyRoad》에담은노래다.\n",
+      "preprocessing >> 〈   S o m   e t h i n g 〉 는   조 지   해 리 슨 이   쓰 고   비 틀 즈 가   1 9 6 9 년   앨 범   《   A b b e y R o a d 》 에   담 은   노 래 다 .\n",
+      "===== 1 =====\n",
+      "original >> 호남이 기반인 바른미래당·대안신당·민주평화당이 우여곡절 끝에 합당해 민생당(가칭)으로 재탄생한다.\n",
+      "replace >> 호남이기반인바른미래당·대안신당·민주평화당이우여곡절끝에합당해민생당(가칭)으로재탄생한다.\n",
+      "preprocessing >> 호 남 이   기 반 인   바 른   미 래   당 · 대 안   신 당 · 민 주 평 화 당 이   우 여 곡 절   끝 에   합 당 해   민 생 당 ( 가 칭 ) 으 로   재 탄 생 한 다 .\n",
+      "===== 2 =====\n",
+      "original >> K리그2에서 성적 1위를 달리고 있는 광주FC는 지난 26일 한국프로축구연맹으로부터 관중 유치 성과와 마케팅 성과를 인정받아 ‘풀 스타디움상’과 ‘플러스 스타디움상’을 수상했다.\n",
+      "replace >> K리그2에서성적1위를달리고있는광주FC는지난26일한국프로축구연맹으로부터관중유치성과와마케팅성과를인정받아‘풀스타디움상’과‘플러스스타디움상’을수상했다.\n",
+      "preprocessing >> K 리 그   2 에 서   성 적   1 위 를   달 리 고   있 는   광 주 F C 는   지 난   2 6 일   한 국   프 로 축 구 연 맹 으 로 부 터   관 중   유 치   성 과 와   마 케 팅   성 과 를   인 정 받 아   ‘ 풀 스 타 디 움 상 ’ 과   ‘ 플 러 스   스 타 디 움 상 ’ 을   수 상 했 다 .\n",
+      "===== 3 =====\n",
+      "original >> 균일가 생활용품점 (주)아성다이소(대표 박정부)는 코로나19 바이러스로 어려움을 겪고 있는 대구광역시에 행복박스를 전달했다고 10일 밝혔다.\n",
+      "replace >> 균일가생활용품점(주)아성다이소(대표박정부)는코로나19바이러스로어려움을겪고있는대구광역시에행복박스를전달했다고10일밝혔다.\n",
+      "preprocessing >> 균 일 가   생 활 용 품 점 ( 주 ) 아 성 다 이 소 ( 대 표   박 정 부 ) 는   코 로 나   1 9 바 이 러 스 로   어 려 움 을   겪 고   있 는   대 구 광 역 시 에   행 복 박 스 를   전 달 했 다 고   1 0 일   밝 혔 다 .\n",
+      "===== 4 =====\n",
+      "original >> 1967년 프로 야구 드래프트 1순위로 요미우리 자이언츠에게 입단하면서 등번호는 8번으로 배정되었다.\n",
+      "replace >> 1967년프로야구드래프트1순위로요미우리자이언츠에게입단하면서등번호는8번으로배정되었다.\n",
+      "preprocessing >> 1 9 6 7 년   프 로 야 구   드 래 프 트   1 순 위 로   요 미 우 리 자 이 언 츠 에 게   입 단 하 면 서   등 번 호 는   8 번 으 로   배 정 되 었 다 .\n",
+      "===== 5 =====\n",
+      "original >> : 유엔, 유럽 의회, 북대서양 조약 기구 (NATO), 국제이주기구, 세계 보건 기구 (WHO), 지중해 연합, 이슬람 협력 기구, 유럽 안보 협력 기구, 국제 통화 기금, 세계무역기구 그리고 프랑코포니.\n",
+      "replace >> :유엔,유럽의회,북대서양조약기구(NATO),국제이주기구,세계보건기구(WHO),지중해연합,이슬람협력기구,유럽안보협력기구,국제통화기금,세계무역기구그리고프랑코포니.\n",
+      "preprocessing >> :   유 엔 ,   유 럽 의 회 ,   북 대 서 양 조 약 기 구 ( N A T O ) ,   국 제 이 주 기 구 ,   세 계 보 건 기 구 ( W H O ) ,   지 중 해   연 합 ,   이 슬 람   협 력 기 구 ,   유 럽 안 보 협 력 기 구 ,   국 제 통 화 기 금 ,   세 계 무 역 기 구   그 리 고   프 랑 코   포 니 .\n",
+      "===== 6 =====\n",
+      "original >> 그에 따라 나폴리와 계약을 연장한 마라도나는 1989년 팀을 UEFA컵 정상으로 인도했으며 이듬해에는 유럽 챔피언 AC 밀란을 상대로 승리를 거두고 다시 한 번 세리에A에서 정상에 등극했다.\n",
+      "replace >> 그에따라나폴리와계약을연장한마라도나는1989년팀을UEFA컵정상으로인도했으며이듬해에는유럽챔피언AC밀란을상대로승리를거두고다시한번세리에A에서정상에등극했다.\n",
+      "preprocessing >> 그 에   따 라   나 폴 리 와   계 약 을   연 장 한   마 라 도 나 는   1 9 8 9 년   팀 을   U E F A   컵   정 상 으 로   인 도 했 으 며   이 듬 해 에 는   유 럽   챔 피 언   A C   밀 란 을   상 대 로   승 리 를   거 두 고   다 시   한   번   세 리 에   A 에 서   정 상 에   등 극 했 다 .\n",
+      "===== 7 =====\n",
+      "original >> 박용오(朴容旿, 1937년 4월 29일(음력 3월 19일)(음력 3월 19일) ~ 2009년 11월 4일)는 서울에서 태어난 대한민국의 기업인으로 두산그룹 회장, KBO 총재 등을 역임했다.\n",
+      "replace >> 박용오(朴容旿,1937년4월29일(음력3월19일)(음력3월19일)~2009년11월4일)는서울에서태어난대한민국의기업인으로두산그룹회장,KBO총재등을역임했다.\n",
+      "preprocessing >> 박 용 오 ( 朴 容 旿 ,   1 9 3 7 년   4 월 2 9 일 ( 음 력   3 월 1 9 일 ) ( 음 력   3 월   1 9 일 ) ~ 2 0 0 9 년   1 1 월   4 일 ) 는   서 울 에 서   태 어 난   대 한 민 국 의   기 업 인 으 로   두 산 그 룹   회 장 ,   K B O   총 재   등 을   역 임 했 다 .\n",
+      "===== 8 =====\n",
+      "original >> 중공군에게 온전히 대항할 수 없을 정도로 약해진 국민당은 타이베이로 수도를 옮기는 것을 결정해, 남아있는 중화민국군의 병력이나 국가, 개인의 재산등을 속속 타이완으로 옮기기 시작해, 12월에는 중앙 정부 기구도 모두 이전해 타이베이 시를 중화민국의 새로운 수도로 삼았다.\n",
+      "replace >> 중공군에게온전히대항할수없을정도로약해진국민당은타이베이로수도를옮기는것을결정해,남아있는중화민국군의병력이나국가,개인의재산등을속속타이완으로옮기기시작해,12월에는중앙정부기구도모두이전해타이베이시를중화민국의새로운수도로삼았다.\n",
+      "preprocessing >> 중 공 군 에 게   온 전 히   대 항 할   수   없 을   정 도 로   약 해 진   국 민 당 은   타 이 베 이 로   수 도 를   옮 기 는   것 을   결 정 해 ,   남 아   있 는   중 화 민 국 군 의   병 력 이 나   국 가 ,   개 인 의   재 산   등 을   속 속   타 이 완 으 로   옮 기 기   시 작 해 ,   1 2 월 에 는   중 앙 정 부   기 구 도   모 두   이 전 해   타 이 베 이 시 를   중 화 민 국 의   새 로 운   수 도 로   삼 았 다 .\n",
+      "===== 9 =====\n",
+      "original >> 특히 김동연 전 경제부총리를 비롯한 김두관 국회의원, 안규백 국회의원, 김종민 국회의원, 오제세 국회의원, 최운열 국회의원, 김정우 국회의원, 권칠승 국회의원, 맹성규 국회의원등 더불어민주당 국회의원 8명이 영상 축하 메세지를 보내 눈길을 끌었다.\n",
+      "replace >> 특히김동연전경제부총리를비롯한김두관국회의원,안규백국회의원,김종민국회의원,오제세국회의원,최운열국회의원,김정우국회의원,권칠승국회의원,맹성규국회의원등더불어민주당국회의원8명이영상축하메세지를보내눈길을끌었다.\n",
+      "preprocessing >> 특 히   김 동 연   전   경 제 부 총 리 를   비 롯 한   김 두 관   국 회 의 원 ,   안 규 백   국 회 의 원 ,   김 종 민   국 회 의 원 ,   오 제 세   국 회 의 원 ,   최 운 열   국 회 의 원 ,   김 정 우   국 회 의 원 ,   권 칠 승   국 회 의 원 ,   맹 성 규   국 회 의 원   등   더 불 어 민 주 당   국 회 의 원   8 명 이   영 상   축 하   메 세 지 를   보 내   눈 길 을   끌 었 다 .\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pykospacing import Spacing\n",
+    "\n",
+    "spacing = Spacing()\n",
+    "\n",
+    "for i in range(len(train_df)):\n",
+    "    if i == 10: break\n",
+    "    new_sentence = spacing(train_df['sentence'][i].replace(\" \", \"\"))\n",
+    "    \n",
+    "    print(\"=\"*5, i, \"=\"*5)\n",
+    "    print(\"original >>\", train_df['sentence'][i])\n",
+    "    print(\"replace >>\", train_df['sentence'][i].replace(\" \", \"\"))\n",
+    "    print(\"preprocessing >>\", \" \".join(new_sentence))"
    ]
   },
   {
